--- a/docs/config/sample.yaml
+++ b/docs/config/sample.yaml
@@ -1,8 +1,9 @@
 # Основная конфигурация
-Core:
+App:
   SessionTimeout: 14400
   TimeZone: "Europe/Moscow"
   Mode: "dev"
+  Version: "1.1.1"
 
 Lg:
   Info: true
@@ -27,24 +28,33 @@ Http:
   WriteTimeout: 10  # Время ожидания окончания передачи ответа в секундах, по истечении которого соединение сбрасывается
   ReadTimeout: 10   # Время ожидания web запроса в секундах, по истечении которого соединение сбрасывается
   MaxHeaderBytes: 1048576 # Максимальный размер заголовка получаемого от браузера клиента в байтах
+  Proxy: "" # format: "http://login:pass@bproxy.msk.mts.ru:3131"
+  Cors:
+    Use: true
+    AllowedOrigins: ["*"]
+    AllowedMethods: ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+    AllowedHeaders: ["Accept", "Authorization", "Content-Type", "X-CSRF-Token"]
+    ExposedHeaders: ["Link"]
+    AllowCredentials: true
+    MaxAge: 300
 
 Connect:
   Mysql:
-    Host: "tcp(localhost:3306)"
+    Host: "" # tcp(localhost:3306)
     Name: "accounter"
     Login: "root"
     Password: "root"
     Charset: "utf8"
   Postgresql:
-    Host: "192.168.99.100"
+    Host: "localhost" # localhost
     Port: 5432
     Name: "test"
-    Login: "root"
-    Password: "root"
+    Login: "postgres"
+    Password: "postgres"
     Ssl: "disable"
     Charset: "utf8"
 
 Sample:
-Name: "Vasya Pupkin"
-IsAccess: true
-Balance: 65.789
+  Name: "Vasya Pupkin"
+  IsAccess: true
+  Balance: 65.789
